--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
         <div class="container">
             <h1 class="Dreamshare__title text_ts26">How Dreamshare works?</h1>
             <div class="row">
-                <div class="col-4 col-md-4">
+                <div class="col-4 col-md-4 col-12">
                     <div class="Dreamshare-card">
                         <img src="img/backgrounds/SedLeo.jpg" alt="Card_img">
                         <div class="Dreamshare-card__item">
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4 col-md-4">
+                <div class="col-4 col-md-4 col-12">
                     <div class="Dreamshare-card">
                         <img src="img/backgrounds/Morbi.jpg" alt="Card_img">
                         <div class="Dreamshare-card__item">
@@ -62,7 +62,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4 col-md-4">
+                <div class="col-4 col-md-4 col-12">
                     <div class="Dreamshare-card">
                         <img src="img/backgrounds/Beach.jpg" alt="Card_img">
                         <div class="Dreamshare-card__item">
